# opentera_messages

./: .gitignore  README.md
cpp/: CMakeLists.txt
proto/: ArchiveEvent.proto  CreateSession.proto  DatabaseEvent.proto  DeviceEvent.proto  JoinSessionEvent.proto  JoinSessionReply.proto  JoinSessionReplyEvent.proto  LeaveSessionEvent.proto  LogEvent.proto  LoginEvent.proto  ParticipantEvent.proto  RPCMessage.proto  Result.proto  ServerCommand.proto  StopSessionEvent.proto  TeraAnyMessage.proto  TeraEvent.proto  TeraMessage.proto  TeraModuleMessage.proto  UserEvent.proto  UserRegisterToEvent.proto
python/: CMakeLists.txt  __init__.py
